# HuffmanCompession

./: AdaptiveHuffmanTree.cpp  CMakeLists.txt  Caesar.cpp  Huffman.cpp  io.cpp  main.cpp  readme.md  zip.cpp
header/: AdaptiveHuffmanTree.h  Caesar.h  Huffman.h  io.h  zip.h
test/: 1.txt  2.txt  3.txt  a.txt
